# nik

./: .gitignore  README.md  pyproject.toml
.github/workflows/: number-normalization-tests.yml  sutegana-tests.yml  test-suite.yml
nik/: asr.py  audio_norm.py  cli.py  epub.py  merge.py  player.py  sanitize.py  synth_irodori.py  synth_irodori_mlx.py  text.py  tts.py  voice.py
nik/templates/: global-reading-overrides.json  global-reading-overrides.md  modern-chinese-common-words.csv  player.html  sanitize-rules.json
tests/: manual_synth_test.py  test_asr.py  test_audio_norm.py  test_cli.py  test_epub.py  test_merge.py  test_player.py  test_sanitize.py  test_tts.py  test_voice.py
