[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nik"
version = "0.1.0"
description = "Japanese EPUB to M4B pipeline using Qwen TTS voice cloning"
authors = []
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "fastapi>=0.110",
    "fugashi>=1.3.0",
    "jinja2>=3.1",
    "lxml>=5.0",
    "mecab-python3>=1.0.6",
    "mlx-audio>=0.3.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openai-whisper>=20231117",
    "numpy>=1.24",
    "jaconv>=0.3.4",
    "python-multipart>=0.0.9",
    "rich>=13.7",
    "soundfile>=0.12",
    "uvicorn>=0.27",
    "wordfreq>=3.1",
    "pytest",
    "ipadic>=1.0.0",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
nik = "nik.cli:main"


[tool.setuptools]
packages = {find = {}}
include-package-data = true
