[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nik"
version = "0.1.0"
description = "Japanese EPUB to M4B pipeline using Irodori-TTS voice cloning"
authors = []
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "fastapi>=0.110",
    "fugashi>=1.3.0",
    "jinja2>=3.1",
    "lxml>=5.0",
    "mecab-python3>=1.0.6",
    "openai-whisper>=20231117",
    "numpy>=1.24",
    "python-multipart>=0.0.9",
    "rich>=13.7",
    "soundfile>=0.12",
    "uvicorn>=0.27",
    "pytest",
    "ipadic>=1.0.0",
    "kyujipy>=0.6.8",
    # Irodori-TTS itself is not pip-installable upstream (broken setuptools
    # discovery); we vendor a clone into .cache/Irodori-TTS and import via
    # sys.path. Its transitive deps go here:
    "dacvae",
    "huggingface-hub>=0.34,<1",
    "llvmlite>=0.40",
    "numba>=0.57",
    "peft>=0.18",
    "pyyaml>=6",
    "safetensors>=0.7",
    "sentencepiece>=0.2",
    "torch>=2.10",
    "torchaudio>=2.10",
    "torchcodec>=0.10",
    "transformers<5",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
nik = "nik.cli:main"

[tool.uv.sources]
dacvae = { git = "https://github.com/facebookresearch/dacvae" }
# On Linux x86_64 (the podman-on-Intel-Mac path), the default PyPI torch
# wheel ships ~5 GB of CUDA libs we can't use. Force the CPU-only index
# there. On macOS arm64 (Apple Silicon native install), the default PyPI
# wheel is already CPU+MPS — leave it alone so MPS stays available.
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools]
packages = {find = {}}
include-package-data = true
