[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nik"
version = "0.1.0"
description = "Japanese EPUB to M4B pipeline using Irodori-TTS voice cloning"
authors = []
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "fastapi>=0.110",
    "fugashi>=1.3.0",
    "jinja2>=3.1",
    "lxml>=5.0",
    "mecab-python3>=1.0.6",
    "openai-whisper>=20231117",
    "numpy>=1.24",
    "python-multipart>=0.0.9",
    "rich>=13.7",
    "soundfile>=0.12",
    "uvicorn>=0.27",
    "pytest",
    "httpx<1",
    "ipadic>=1.0.0",
    "kyujipy>=0.6.8",
    # Irodori-TTS itself is not pip-installable upstream (broken setuptools
    # discovery); we vendor a clone into .cache/Irodori-TTS and import via
    # sys.path. Its transitive deps go here:
    "dacvae",
    # mlx-audio 0.4.3 needs hub>=1.0; both nik and upstream Irodori only call
    # hf_hub_download, which is stable across the 0.x→1.0 boundary.
    "huggingface-hub>=1.0,<2",
    "llvmlite>=0.40",
    "numba>=0.57",
    "peft>=0.18",
    "pyyaml>=6",
    "safetensors>=0.7",
    "sentencepiece>=0.2",
    "torch>=2.10",
    "torchaudio>=2.10",
    "torchcodec>=0.10",
    # mlx-audio>=0.4.3 (used as the optional NIK_BACKEND=mlx path) pins
    # transformers>=5.5; upstream Irodori only calls AutoTokenizer.from_pretrained,
    # which is API-stable across 4.x and 5.x, so we bump in lockstep.
    "transformers>=5.5,<6",
    # MLX backend (optional via NIK_BACKEND=mlx). Bundles the Irodori port at
    # mlx_audio.tts.models.irodori_tts; weights pulled from mlx-community.
    "mlx-audio>=0.4.3",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
nik = "nik.cli:main"

[tool.uv]
# Apple Silicon (macOS arm64) is the only supported platform — torch's default
# PyPI wheel here already includes MPS. Constrain resolution so the lockfile
# doesn't carry Linux/CUDA variants.
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[tool.uv.sources]
dacvae = { git = "https://github.com/facebookresearch/dacvae" }

[tool.setuptools]
packages = {find = {}}
include-package-data = true
